--- a/_config.yml
+++ b/_config.yml
@@ -1,28 +1,14 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-title: Desafio de Programação - IFMS NA
+# {{ site.myvariable }}.
+title: Desafio de Programação
+author: Lucas H. Negri
 email: lucas.negri@ifms.edu.br
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description: >- 
+  Sítio que reúne informações sobre o projeto de ensino "Desafio de Programação", realizado no
+  Instituto Federal de Mato Grosso do Sul, câmpus Nova Andradina. Aqui você encontrará informações
+  sobre as edições passadas e exemplos de código relevantes para competições como a Olimpíada Brasileira
+  de Informática e a Maratona de Programação
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "https://desafio-ifms.web.app"
 
 # Build settings
 markdown: kramdown
